name:          amd
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.24.2.0

library
  default-language:
    Haskell2010
  exposed-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    MutatingRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    LeastCommonMultiple,
    FindSmallest,
    IsPrime,
    Exponentiation,
    Choose,
    MutatingNormRecursion,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    Length,
    At,
    Map,
    UnfoldN,
    Range,
    Zip,
    LookbackFold,
    ZipPad,
    Unzip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe,
    Common,
    Disjoint,
    Sublists,
    TakeAndDrop,
    TakeButAndDropBut,
    TakeWhileAndDropWhile
  build-depends:
    base == 4.*,
    QuickCheck



test-suite amd-functions
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Functions.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Functions.main_functions
  other-modules:
    Testing

test-suite amd-flip
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Flip.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Flip.main_flip
  other-modules:
    Testing,
    Functions

test-suite amd-clone
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Clone.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Clone.main_clone
  other-modules:
    Testing,
    Functions,
    Flip

test-suite amd-compose
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Composition.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Composition.main_compose
  other-modules:
    Testing,
    Functions,
    Flip

test-suite amd-booleans
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Booleans.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Booleans.main_boolean
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition

test-suite amd-not
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Not.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Not.main_not
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans

test-suite amd-and
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: And.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is And.main_and
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not

test-suite amd-or
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Or.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Or.main_or
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not,
    And

test-suite amd-impl
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Implies.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Implies.main_impl
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not,
    And,
    Or

test-suite amd-predicates
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Predicates.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Predicates.main_predicate
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not,
    And,
    Or,
    Implies

test-suite amd-tuple
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tuples.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Tuples.main_tuple
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    And,
    Not

test-suite amd-disjoint-union
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DisjointUnions.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is DisjointUnions.main_disjoint_union
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans

test-suite amd-unary
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Unary.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Unary.main_unary
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not,
    And,
    Tuples,
    DisjointUnions

test-suite amd-nats
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: NaturalNumbers.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is NaturalNumbers.main_nats
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Tuples,
    Flip,
    Clone,
    Composition,
    DisjointUnions,
    Unary

test-suite amd-simplerec
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SimpleRecursion.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is SimpleRecursion.main_simplerec
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers

test-suite amd-bailoutrec
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: BailoutRecursion.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is BailoutRecursion.main_bailoutrec
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers

test-suite amd-mutatingrec
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: MutatingRecursion.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is MutatingRecursion.main_mutatingrec
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers

test-suite amd-dnaturalrec
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DoubleNaturalRecursion.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is DoubleNaturalRecursion.main_dnaturalRec
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers

test-suite amd-plus
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Plus.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Plus.main_plus
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion

test-suite amd-times
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Times.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Times.main_times
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    Plus

test-suite amd-minus
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Minus.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Minus.main_minus
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times

test-suite amd-leq
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LessThanOrEqualTo.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is LessThanOrEqualTo.main_leq
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus

test-suite amd-max-min
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: MaxAndMin.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is MaxAndMin.main_max_min
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-divalg
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DivisionAlgorithm.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is DivisionAlgorithm.main_divalg
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-div
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Divides.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Divides.main_div
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm

test-suite amd-gcd
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: GreatestCommonDivisor.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is GreatestCommonDivisor.main_gcd
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion

test-suite amd-coprime
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: CoprimeTo.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is CoprimeTo.main_coprime
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor

test-suite amd-lcm
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LeastCommonMultiple.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is LeastCommonMultiple.main_lcm
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo

test-suite amd-findsmallest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: FindSmallest.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is FindSmallest.main_findSmallest
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-prime
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: IsPrime.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is IsPrime.main_prime
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    LeastCommonMultiple,
    FindSmallest

test-suite amd-power
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Exponentiation.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Exponentiation.main_power
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    LeastCommonMultiple

test-suite amd-choose
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Choose.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Choose.main_choose
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-head-tail
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: HeadAndTail.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is HeadAndTail.main_head_tail
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists

test-suite amd-foldl
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LeftFold.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is LeftFold.main_foldl
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    Lists

test-suite amd-cfoldr
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: ConsumingFold.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is ConsumingFold.main_cfoldr
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    Lists

test-suite amd-bfoldr
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: BailoutFold.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is BailoutFold.main_bfoldr
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail

test-suite amd-dbfoldr
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DoubleBailoutFold.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is DoubleBailoutFold.main_dbfoldr
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail

test-suite amd-snoc
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Snoc.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Snoc.main_snoc
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail,
    LeftFold

test-suite amd-rev
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Reverse.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Reverse.main_rev
  other-modules:
    Testing,
    Functions,
    Flip,
    Clone,
    Composition,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc

test-suite amd-cat
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Cat.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Cat.main_cat
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse

test-suite amd-length
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Length.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Length.main_length
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion
    BailoutRecursion,
    Plus,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse,
    Cat

test-suite amd-at
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: At.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is At.main_at
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse,
    Cat,
    Length

test-suite amd-map
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Map.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Map.main_map
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse,
    Cat,
    Length,
    At

test-suite amd-unfoldN
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: UnfoldN.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is UnfoldN.main_unfoldN
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map

test-suite amd-range
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Range.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Range.main_range
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN

test-suite amd-zip
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Zip.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Zip.main_zip
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map

test-suite amd-lfoldr
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LookbackFold.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is LookbackFold.main_lfoldr
  other-modules:

test-suite amd-zippad
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: ZipPad.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is ZipPad.main_zipPad
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map

test-suite amd-unzip
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Unzip.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Unzip.main_unzip
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    Zip

test-suite amd-prefix-suffix
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: PrefixAndSuffix.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is PrefixAndSuffix.main_prefix_suffix
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip

test-suite amd-lcp
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LongestCommonPrefix.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is LongestCommonPrefix.main_lcp
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Minus,
    Times,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    Zip,
    PrefixAndSuffix

test-suite amd-all-any
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: AllAndAny.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is AllAndAny.main_all_any
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    Zip,
    PrefixAndSuffix

test-suite amd-tails-inits
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TailsAndInits.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is TailsAndInits.main_tails_inits
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny

test-suite amd-filter
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Filter.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Filter.main_filter
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits

test-suite amd-elt
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Elt.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Elt.main_elt
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    Snoc,
    Reverse,
    Cat,
    UnfoldN,
    Range,
    At,
    Length,
    Map,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter

test-suite amd-count
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Count.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Count.main_count
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    Snoc,
    Reverse,
    Cat,
    UnfoldN,
    Range,
    At,
    Length,
    Map,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt

test-suite amd-repeat
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Repeat.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Repeat.main_repeat
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count

test-suite amd-sublist
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Sublist.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Sublist.main_sublist
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat

test-suite amd-infix
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Infix.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Infix.main_isInfix
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist

test-suite amd-select
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Select.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Select.main_select
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix

test-suite amd-unique
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Unique.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Unique.main_unique
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select

test-suite amd-delete
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Delete.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Delete.main_delete
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique

test-suite amd-dedupe
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Dedupe.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Dedupe.main_dedupe
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete

test-suite amd-common
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Common.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Common.main_common
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe

test-suite amd-disjoint
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Disjoint.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Disjoint.main_disjoint
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe,
    Common

test-suite amd-sublists
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Sublists.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is Sublists.main_sublists
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    Exponentiation,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe

test-suite amd-take-drop
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TakeAndDrop.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is TakeAndDrop.main_take_drop
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe

test-suite amd-takebut-dropbut
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TakeButAndDropBut.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is TakeButAndDropBut.main_takebut_dropbut
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe,
    TakeAndDrop

test-suite amd-takewhile-dropwhile
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TakeWhileAndDropWhile.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -Wall -main-is TakeWhileAndDropWhile.main_takewhile_dropwhile
  other-modules:
    Testing,
    Booleans,
    Not,
    And,
    Or,
    Implies,
    Functions,
    Flip,
    Clone,
    Composition,
    Predicates,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    ConsumingFold,
    BailoutFold,
    DoubleBailoutFold,
    Snoc,
    Reverse,
    Cat,
    At,
    Length,
    Map,
    UnfoldN,
    Range,
    Zip,
    PrefixAndSuffix,
    LongestCommonPrefix,
    AllAndAny,
    TailsAndInits,
    Filter,
    Elt,
    Count,
    Repeat,
    Sublist,
    Infix,
    Select,
    Unique,
    Delete,
    Dedupe,
    TakeAndDrop
