name:          ml
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  default-language:
    Haskell2010
  exposed-modules:
    Indices
    IndexIsos
    Tensors
    Gradients
    SupervisedModels
    Test.Tensors
  build-depends:
    base >= 4.0 && < 5.0,
    array >= 0.5.1 && < 0.6.0,
    ad >= 4.3.4 && < 5.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    keys >= 3.11 && < 4.0

test-suite ml-index
  type:             exitcode-stdio-1.0
  main-is:          Indices.lhs
  ghc-options:      -main-is Indices.main_index
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    ad >= 4.3.4 && < 5.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    Tensors

test-suite ml-index-isos
  type:             exitcode-stdio-1.0
  main-is:          IndexIsos.lhs
  ghc-options:      -main-is IndexIsos.main_index_isos
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    ad >= 4.3.4 && < 5.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    Tensors

test-suite ml-tensor
  type:             exitcode-stdio-1.0
  main-is:          Test/Tensors.lhs
  ghc-options:      -main-is Test.Tensors.main_tensor
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    array >= 0.5.1 && < 0.6.0,
    ad >= 4.3.4 && < 5.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    QuickCheck >= 2.8.1 && < 3.0.0
  other-modules:
    Indices
    IndexIsos
    Tensors

test-suite ml-gradients
  type:             exitcode-stdio-1.0
  main-is:          Gradients.lhs
  ghc-options:      -main-is Gradients.main_gradients
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    ad >= 4.3.4 && < 5.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors
