name:          ml
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  default-language:
    Haskell2010
  exposed-modules:
    Indices
    IndexIsos
    Tensors
    TensorFunctions
    Gradients
    GradientChecking
    GradientDescent
    SupervisedModels
    CompositeModels
    Test.Tensors
  build-depends:
    base >= 4.0 && < 5.0,
    array >= 0.5.1 && < 0.6.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    QuickCheck >= 2.8.1 && < 3.0.0

test-suite ml-index
  type:             exitcode-stdio-1.0
  main-is:          Indices.lhs
  ghc-options:      -main-is Indices.main_index
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors

test-suite ml-index-isos
  type:             exitcode-stdio-1.0
  main-is:          IndexIsos.lhs
  ghc-options:      -main-is IndexIsos.main_index_isos
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors

test-suite ml-tensor
  type:             exitcode-stdio-1.0
  main-is:          Test/Tensors.lhs
  ghc-options:      -main-is Test.Tensors.main_tensor
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    array >= 0.5.1 && < 0.6.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    QuickCheck >= 2.8.1 && < 3.0.0
  other-modules:
    Indices
    IndexIsos
    Tensors

test-suite ml-gradient-checking
  type:             exitcode-stdio-1.0
  main-is:          GradientChecking.lhs
  ghc-options:      -main-is GradientChecking.main_gradient_checking
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors,
    TensorFunctions,
    Gradients

test-suite ml-gradient-descent
  type:             exitcode-stdio-1.0
  main-is:          GradientDescent.lhs
  ghc-options:      -main-is GradientDescent.main_gradient_descent
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors,
    TensorFunctions,
    Gradients,
    GradientChecking

test-suite ml-supervised-models
  type:             exitcode-stdio-1.0
  main-is:          SupervisedModels.lhs
  ghc-options:      -main-is SupervisedModels.main_supervised_models
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors,
    TensorFunctions,
    Gradients,
    GradientChecking,
    GradientDescent

test-suite ml-composite-models
  type:             exitcode-stdio-1.0
  main-is:          CompositeModels.lhs
  ghc-options:      -main-is CompositeModels.main_composite_models
  default-language: Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.8.1 && < 3.0.0,
    pretty >= 1.1.2.0 && < 2.0.0.0,
    array >= 0.5.1 && < 0.6.0
  other-modules:
    Indices,
    IndexIsos,
    Tensors,
    TensorFunctions,
    Gradients,
    GradientChecking,
    GradientDescent,
    SupervisedModels
